Add design with CSS

--- a/index.html
+++ b/index.html
@@ -29,10 +29,14 @@
                 <div class="add-color">
                     <i class="fa-solid fa-font"></i>
                     <i class="fa-regular fa-copy"></i>
-                    <i class="fa-solid fa-fill-drip"></i>
+                    
+                        <input type="color">
+                    
                 </div>
             </div>
-            <div class="content"></div>
+            <div class="content">
+                <textarea id="text-box" cols="30" rows="15" ></textarea>
+            </div>
         </div>
     </main>
     <!-- End -->
